--- a/src/css/panels.css
+++ b/src/css/panels.css
@@ -1,5 +1,5 @@
 .content{
-    margin: 0 5rem;
+    margin: 0 2rem;
 }
 
 .panel {
@@ -27,8 +27,9 @@
 
 .panels {
     display: grid;
-    grid-gap: 1rem;
-    margin: 1rem;
+    grid-gap: .5rem;
+    margin: .5rem;
+    margin-top: 5rem;
 }
 
 @media (min-width: 600px) {
