--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,8 +1,11 @@
 body{
     margin: 0;
     font-family: Arial, sans-serif;
+    background-color: #d0cfcd;
 }
-
+header {
+    height: 7rem;
+}
 .nav {
     background-color: #333;
     color:white;
@@ -11,15 +14,20 @@ body{
 }
 
 header a, .nav a{
-    color: black;
+    color: white;
     outline: none;
     text-decoration: none;
 }
-.nav a {
-    color: white;
-}
 .logo {
-    font-size: xx-large;
+    font-size: 3rem;
+    padding: 3rem;
+}
+.logo a {
+    color: #787878;
+}
+
+.title {
+    font-size: 3rem;
 }
 
 main h1 {
