--- a/src/css/panels.css
+++ b/src/css/panels.css
@@ -1,10 +1,8 @@
 .content{
-    margin: 0 2rem;
+    margin: 0 1.5rem;
 }
 
 .panel {
-    background-color: lightcoral;
-
     position: relative;
     display: inline-block;
 }
@@ -36,10 +34,16 @@
     .panels {
         grid-template-columns: repeat(2, 1fr);
     }
+    .content{
+        margin: 0 1.5rem;
+    }
 }
 
 @media (min-width: 900px) {
     .panels {
         grid-template-columns: repeat(4, 1fr);
+    }
+    .content{
+        margin: 0 0rem;
     }
 }
