--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,7 +1,7 @@
 header {
-    height: 8rem;
-    margin-bottom: 3rem;
-    padding: 6rem;
+    height: 210px;
+    margin: 0 !important;
+    padding: 0 !important;
 
     white-space: nowrap;
 }
@@ -10,52 +10,30 @@ header a {
     color: #787878;
 }
 
-@media (min-width: 600px) {
+@media (min-width: 600px) {}
 
-}
+@media (min-width: 900px) {}
 
-@media (min-width: 900px) {
-
+.header-container {
+    position: relative;
 }
 
 .logoButton {
-    font-size: 4rem;
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%, 0%);
+    margin-top: 30px;
 }
 
-.sideMenuButton {}
+.sideMenuButton {
+    position: absolute;
+    right: 0%;
+    margin-top: 32px;
+    transform: translate(-50%, 0%);
+}
 
 .sideMenuButton svg {
     width: 38px;
     height: 38px;
     color: #787878;
-}
-
-.offcanvas {
-    font-size: 1.2rem;
-    --bs-offcanvas-transition: transform 1s ease-in-out;
-    --bs-offcanvas-color: black;
-    --bs-offcanvas-bg: rgba(255, 255, 255, 0.6);
-    --bs-border-width: 0px !important;
-    /* --bs-offcanvas-zindex: 1045; */
-    /* --bs-offcanvas-width: 400px; */
-    /* --bs-offcanvas-height: 30vh; */
-    /* --bs-offcanvas-padding-x: 1rem; */
-    /* --bs-offcanvas-padding-y: 1rem; */
-    /* --bs-offcanvas-color: var(--bs-body-color); */
-    /* --bs-offcanvas-bg: var(--bs-body-bg); */
-    /* --bs-offcanvas-border-width: var(--bs-border-width); */
-    /* --bs-offcanvas-border-color: var(--bs-border-color-translucent); */
-    /* --bs-offcanvas-box-shadow: var(--bs-box-shadow-sm); */
-    /* --bs-offcanvas-transition: transform 0.3s ease-in-out; */
-    /* --bs-offcanvas-title-line-height: 1.5; */
-}
-
-.offcanvas-backdrop.show {
-    opacity: 0 !important;
-}
-
-.offcanvas-body a{
-    display: table !important;
-    text-decoration: none !important;
-    color: #000;
 }
