--- a/src/css/panels.css
+++ b/src/css/panels.css
@@ -13,7 +13,8 @@
     left: 0;
     margin: 15px;
     color: white;
-    font-size: 20px;
+    font-size: 1.2em;
+    font-weight: normal;
 }
 
 .panel img {
@@ -27,7 +28,8 @@
     display: grid;
     grid-gap: .5rem;
     margin: .5rem;
-    margin-top: 5rem;
+    margin-top: 0rem;
+    /* margin-top: 5rem; */
 }
 
 @media (min-width: 600px) {
