--- a/src/css/projectpage.css
+++ b/src/css/projectpage.css
@@ -1,6 +1,6 @@
 .wrapper {
     display: grid;
-    grid-template-columns: 1fr 2fr 1fr;
+    grid-template-columns: 1fr 3fr 1fr;
     margin-bottom: 50px;
 }
 
@@ -8,6 +8,8 @@
     cursor: pointer;
     text-align: center;
     position: relative;
+    /* ================ */
+    /* height: 550px; */
 }
 
 .description-full,
@@ -28,6 +30,11 @@
 
 .description-text {
     text-align: center !important;
+    font-size: 1.3em;
+    font-weight: 400;
+}
+.description-full {
+    font-weight: 600;
 }
 
 .description .show {
@@ -41,21 +48,33 @@
     opacity: 0;
     z-index: -1;
 }
+/* ====================================== */
 
-.carousel-item {
+.carousel-inner {
+    height: 520px;
+    /* border: 3px solid red */
+}
+
+.carousel-item img {
+    display: block !important;
+    width: 100% !important;
+    object-fit: cover !important;
+    height: 100% !important;
+  }
+
+/* .carousel-item {
     transition-duration: 3s !important;
-    /* ============================ */
+    
     width: 100%;
     height: 550px;
     overflow: hidden;
     position: relative;
-}
+} */
 
-.carousel-item img {
+/* .carousel-item img {
     object-fit: cover;
     position: relative;
-}
-
+} */
 
 .carousel-indicators {
     bottom: -50px;
@@ -76,11 +95,40 @@
     opacity: 1 !important;
     border-color: black !important;
 }
-
+.carousel-control-next, .carousel-control-prev {
+    width: 3%;
+    margin: 15px;
+    align-items: end;
+    color: blue;
+}
+/* ====================================== */
 .projectName {
     color: black !important;
-    font-size: 1.5rem;
+    font-size: 2em;
+    font-weight: normal;
     text-align: center;
     margin: 0 auto;
 }
 
+::-webkit-scrollbar {
+    width: 8px;
+  }
+  
+  ::-webkit-scrollbar-track {
+    background-color: #f1f1f1;
+    border-radius: 10px;
+  }
+  
+  ::-webkit-scrollbar-thumb {
+    background-color: #888;
+    border-radius: 10px;
+  }
+  
+  ::-webkit-scrollbar-thumb:hover {
+    background-color: #555;
+  }
+  
+  ::-webkit-scrollbar-button {
+    display: none;
+  }
+  
