--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,9 +1,13 @@
 header {
-    height: 210px;
+    height: 255px;
     margin: 0 !important;
     padding: 0 !important;
 
     white-space: nowrap;
+}
+
+.header-project {
+    height: 235px !important;
 }
 
 header a {
@@ -21,15 +25,28 @@ header a {
 .logoButton {
     position: absolute;
     left: 50%;
-    transform: translate(-50%, 0%);
-    margin-top: 30px;
+    transform: translate(-50%, 34%);
+}
+
+.logoButton-main {
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%, 30%);
 }
 
 .sideMenuButton {
     position: absolute;
     right: 0%;
-    margin-top: 32px;
-    transform: translate(-50%, 0%);
+    /* margin-top: 32px; */
+    margin-top: 60px;
+    margin-right: 105px;
+    transform: translate(00%, 50%);
+}
+
+
+.sideMenuButton button {
+    background-color: transparent;
+    border: none;
 }
 
 .sideMenuButton svg {
