--- a/src/css/panels.css
+++ b/src/css/panels.css
@@ -1,7 +1,3 @@
-.content {
-    margin: 0 1.5rem;
-}
-
 .panel {
     position: relative;
     display: inline-block;
@@ -26,8 +22,8 @@
 
 .panels {
     display: grid;
-    grid-gap: .5rem;
-    margin: .5rem;
+    grid-gap: 1.4rem;
+    margin: 1.4rem;
     margin-top: 0rem;
     /* margin-top: 5rem; */
 }
@@ -36,18 +32,10 @@
     .panels {
         grid-template-columns: repeat(2, 1fr);
     }
-
-    .content {
-        margin: 0 1.5rem;
-    }
 }
 
 @media (min-width: 900px) {
     .panels {
         grid-template-columns: repeat(4, 1fr);
-    }
-
-    .content {
-        margin: 0 0rem;
     }
 }
