--- a/src/css/sidemenu.css
+++ b/src/css/sidemenu.css
@@ -2,7 +2,7 @@
     font-size: 1.2rem;
     --bs-offcanvas-transition: transform 1s ease-in-out;
     --bs-offcanvas-color: black;
-    --bs-offcanvas-bg: rgba(255, 255, 255, 0.6);
+    --bs-offcanvas-bg: rgba(255, 255, 255, 0.75);
     --bs-border-width: 0px !important;
     /* --bs-offcanvas-zindex: 1045; */
     --bs-offcanvas-width: 520px;
@@ -29,7 +29,8 @@
 
 .offcanvas-body {
     padding-top: 256px;
-    text-align: center;;
+    text-align: left;
+    margin-left: 200px;
 }
 
 .offcanvas-body a {
