--- a/src/css/contacts.css
+++ b/src/css/contacts.css
@@ -2,19 +2,22 @@
     display: flex;
     justify-content: center;
     align-items: center;
+
+    margin-top: 142px;
 }
 
 .textlinks, .feedback {
-    padding: 15px;
-    margin: 0px 70px;
+    padding: 8px;
+    margin: 0px 270px;
     columns: 1;
     display: inline-block;
+    line-height: 32px;
 }
 
 .text {
-    font-size: 60pt;
-    font-weight: black;
-    line-height: 60px;
+    font-size: 64px;
+    font-weight: 600;
+    line-height: 48px;
     width: -webkit-min-content;
     width: -moz-min-content;
     width: min-content;
@@ -23,8 +26,8 @@
 
 .line {
     background-color: black;
-    height: 2px;
-    width: 80px;
+    height: 1px;
+    width: 62px;
     margin: 15px 0px;
 }
 
@@ -34,7 +37,7 @@
 
 .feedback form {
     display: grid;
-    width: 350px;
+    width: 380px;
 }
 
 .textlinks .vertical {
@@ -42,29 +45,35 @@
 }
 
 .textlinks .vertical a{
-    margin: 0px 5px;
+    margin: 0px 4px;
 }
 
-.feedback input[type=text],
-input[type=Email] {
+.feedback input[type="text"],
+input[type="Email"] {
     border: none;
     border-bottom: 1px solid black;
     background-color: transparent;
     margin: 5px 0px;
+    height: 32px;
+    padding: 0;
+
 }
 
 #umessage {
-    margin-top: 25px;
-    border: 1px solid black;
+    margin-top: 30px;
+    border: 2px solid #7e7e7e;
     background: transparent;
     resize: vertical;
+    min-height: 68px;
+    
+    
 }
 
 .feedback input[type=button] {
     border: none;
     background: transparent;
-    font-weight: bold;
-    width: 50px;
+    font-weight: 400;
+    font-size: 20px;
     margin: 0 auto;
     margin-top: 25px;
 }
@@ -75,6 +84,11 @@ input:focus {
 
 input::-webkit-input-placeholder, textarea::-webkit-input-placeholder {
     color: black !important;
-    opacity: 1;
-    font-weight: bold;
+    font-weight: 500;
+    font-size: 12px;
+}
+textarea::-webkit-input-placeholder {
+    font-size: 10px;
+    padding: 5px;
+    
 }
