--- a/src/css/services.css
+++ b/src/css/services.css
@@ -1,7 +1,7 @@
 .stext {
     display: flex;
     justify-content: center;
-    align-items: center;
+    /* align-items: center; */
 }
 
 .stext div {
