--- a/src/css/projectpage/grid.css
+++ b/src/css/projectpage/grid.css
@@ -1,4 +1,4 @@
-.grid {
+.project-grid {
     display: grid;
     grid-template-columns: repeat(1, 1fr);
     
@@ -6,5 +6,5 @@
 }
 
 @media (min-width: 600px) {
-    .grid { grid-template-columns: 1fr 2fr 1fr; }
+    .project-grid { grid-template-columns: 1fr 2fr 1fr; }
   }
