--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -11,7 +11,7 @@ body {
   color: black;
   font-family: "Montserrat", sans-serif;
   font-optical-sizing: auto;
-  font-weight: 600;
+  /* font-weight: 600; */
   font-style: normal;
   background-color: #d0cfcd;
 }
