--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -51,3 +51,24 @@ footer * {
     /* font-weight: 600; */
     text-decoration: underline !important;
 }
+
+@media screen and (max-width: 1500px) {
+    .footer-links {
+        grid-column-start: 1;
+        grid-column-end: 3;
+        grid-row-start: 1;
+        grid-row-end: 2;
+    }
+    .footer-links.horizontal {
+        grid-column-start: 2;
+        grid-column-end: 4;
+        grid-row-start: 1;
+        grid-row-end: 2;
+    }
+    .footer-text {
+        grid-column-start: 1;
+        grid-column-end: 4;
+        grid-row-start: 2;
+        grid-row-end: 3;
+    }
+}
