--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -14,6 +14,8 @@ body {
   /* font-weight: 600; */
   font-style: normal;
   background-color: #d0cfcd;
+
+  --min-screen-size: 1024;
 }
 
 .title {
