fix styles footer, header, services, update titles home

--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -19,7 +19,7 @@ footer {
 }
 
 .footer-icon {
-    margin: 0px 3%;
+    margin: 0px 15px;
 }
 
 .footer-text-container {
@@ -45,7 +45,7 @@ footer {
 }
 
 .footer-link {
-    margin: 0px 2%;
+    margin: 0px 15px;
 }
 .footer-link a {
     text-decoration: none !important;
@@ -56,7 +56,7 @@ footer {
     text-decoration: underline !important;
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1350px) {
     .footer-container {
         grid-template-columns: 1fr;
     }
