--- a/src/css/project-page/styles.css
+++ b/src/css/project-page/styles.css
@@ -1,3 +1,5 @@
+
+/* ====================================================================================== */
 @media screen and (min-width: 1350px) {
     .project-grid {
         display: grid;
@@ -138,5 +140,13 @@
         font-size: 24px;
         font-weight: 400;
         text-align: center;
+    }
+}
+@media (min-width: 1351px) and (max-width: 1700px) {
+    .project-grid {
+        grid-auto-rows: 400px;
+    }
+    .project-text {
+        padding: 35px;
     }
 }
