fix footer margin, sidemenu, mobile sizes

--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -1,6 +1,6 @@
 footer {
     margin: 25px;
-    margin-top: 225px;
+    /* margin-top: 225px; */
     font-size: 15px;
     /* font-size: 80%; */
     font-weight: 400;
