--- a/src/css/project-page/styles.css
+++ b/src/css/project-page/styles.css
@@ -96,6 +96,7 @@
         max-width: 50%;
         margin: 0px auto;
         margin-top: 15px;
+        margin-bottom: 200px;
     }
 
     .project-name {
