--- a/src/css/project-page/carousel.css
+++ b/src/css/project-page/carousel.css
@@ -7,7 +7,7 @@
     border-radius: 25px;
     transition: 2s ease-in-out;
 
-    margin: 8px;
+    margin: 10px;
 }
 
 .my-carousel-indicator.active {
@@ -48,3 +48,19 @@
     right: 10%;
     transform: translateY(0%);
 } */
+/* ========================================== */
+.my-carousel-indicator {
+    position: relative;
+}
+.my-carousel-indicator::before {
+    content: "";
+    position: absolute;
+    top: -10px;
+    left: -10px;
+    width: calc(100% + 20px);
+    height: calc(100% + 20px);
+    z-index: 1;
+    /* opacity: 0; */
+    /* border: dashed; */
+    /* background-color: rgba(127, 255, 212, 0.233); */
+}
