--- a/src/css/project-page/styles.css
+++ b/src/css/project-page/styles.css
@@ -142,6 +142,10 @@
         font-weight: 400;
         text-align: center;
     }
+
+    .preview {
+        border: 3px solid red;
+    }
 }
 /* @media (min-width: 1351px) and (max-width: 1700px) {
     .project-grid {
