--- a/src/css/project-page/fullscreen.css
+++ b/src/css/project-page/fullscreen.css
@@ -1,4 +1,4 @@
-#fullscreen-overlay {
+.fullscreen-overlay {
     position: fixed;
     width: 100%;
     height: 100%;
@@ -13,10 +13,17 @@
     display: flex;
     justify-content: center;
     align-items: center;
+
+    transition: transform 0.3s ease;
+
 }
 
-#fullscreen-img {
+.fullscreen-img {
     max-width: 100%;
     max-height: 100%;
     cursor: default;
+    -webkit-user-drag: none !important;
+    user-select: none !important;
 }
+
+
