--- a/src/css/project-page/fullscreen.css
+++ b/src/css/project-page/fullscreen.css
@@ -1,29 +1,15 @@
-.fullscreen-overlay {
-    position: fixed;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: rgb(0, 0, 0);
-    z-index: 2;
-    cursor: pointer;
 
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.image-gallery {
+    width: 0px;
+    height: 0px;
+    left: -1000px;
+  }
 
-    transition: transform 0.3s ease;
+  .image-gallery-fullscreen-button {
+    outline: none;
+  }
 
-}
-
-.fullscreen-img {
-    max-width: 100%;
-    max-height: 100%;
-    cursor: default;
-    -webkit-user-drag: none !important;
-    user-select: none !important;
-}
-
-
+  .image-gallery-icon {
+    dispaly: none;
+  }
+  
